--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
   <meta property="og:title" content="Objectified">
   <meta property="og:type" content="website" />
-  <meta property="og:description" content="Watch Objectified, Sundays at 8pm ET / 5pm PT or 11pm ET / 8pm PT on Fox News Channel." />
-  <meta property="og:image" content="http://objectifiedtv.com/images/og-image-objectified-480x360.jpg" />
-  <meta property="og:image" content="http://objectifiedtv.com/images/og-image-objectified-1200x630.jpg" />
+  <meta property="og:description" content="Watch Objectified, Sundays at 8pm ET / 5pm PT on the Fox News Channel" />
+  <meta property="og:image" content="http://objectifiedtv.com/images/og-img-objectified-480x360.jpg" />
+  <meta property="og:image" content="http://objectifiedtv.com/images/og-img-objectified-1200x630.jpg" />
   <meta property="og:url" content="http://objectifiedtv.com">
 
   <link rel="icon" type="image/x-icon" href="http://objectifiedtv.com/images/favicon.ico" />
@@ -48,6 +48,7 @@
 
 </head>
 <body id="objectified-bg">
+
 <div class="nav-stripe"></div>
 
 <div class="top-half">
@@ -69,10 +70,13 @@
     </div>
   </div>
   <div class="video">
-    <div class="video-container">
-      <video autoplay muted poster="images/celebs/video-still-magic.jpg">
-      <source src="images/videos/episode1-magic.mp4" type="video/mp4">
-      </video>
+    <div class="video-border">
+      <div class="video-container">
+        <video controls autoplay muted>
+          <source src="images/videos/magicjohnson540.mp4" type="video/mp4">
+        </video>
+        <div class="video-poster"></div>
+      </div>
     </div>
   </div>
 </div>
@@ -203,37 +207,57 @@
 <script type="text/javascript">
   var videoPlayButton,
       videoContainer = document.getElementsByClassName('video-container')[0],
+      videoPoster = document.getElementsByClassName('video-poster')[0],
       video = document.getElementsByTagName('video')[0],
+
       videoMethods = {
         renderVideoPlayButton: function() {
           if (videoContainer.contains(video)) {
+            videoPoster.classList.add('is-hidden')
             this.formatVideoPlayButton()
-            video.classList.add('has-media-controls-hidden')
             videoPlayButton = document.getElementsByClassName('video-overlay-play-button')[0]
+            videoPlayButton.classList.add('is-hidden')
             videoPlayButton.addEventListener('click', this.hideVideoPlayButton)
           }
         },
 
         formatVideoPlayButton: function() {
           videoContainer.insertAdjacentHTML('beforeend', '\
-            <svg class="video-overlay-play-button" viewBox="0 0 200 200" alt="Play video">\
-                <style type="text/css">\
-                .st0{stroke:#EBC547;stroke-width:6;stroke-miterlimit:10;}\
-                .st1{fill:#EBC547;}\
-                </style>\
-              <rect class="st0" width="200" height="200" fill-opacity="0.75"/>\
-              <polygon class="st1" points="76.7,70.7 76.7,133.3 131.3,102 "/>\
-            </svg>\
-            ')
+		<svg class="video-overlay-play-button" viewBox="0 0 200 200" alt="Play video">\
+			<style type="text/css">\
+			.st0{stroke:#EBC547;stroke-width:6;stroke-miterlimit:10;}\
+			.st1{fill:#EBC547;}\
+			</style>\
+		  <rect class="st0" width="200" height="200" fill-opacity="0.75"/>\
+		  <polygon class="st1" points="76.7,70.7 76.7,133.3 131.3,102 "/>\
+		</svg>\
+		')
         },
 
         hideVideoPlayButton: function() {
           video.play()
+          videoPoster.classList.add('is-hidden')
           videoPlayButton.classList.add('is-hidden')
           video.classList.remove('has-media-controls-hidden')
           video.setAttribute('controls', 'controls')
-        }
+        },
+
+        showVideoPlayButton: function() {
+          videoPoster.classList.remove('is-hidden')
+          videoPlayButton.classList.remove('is-hidden')
+          video.classList.remove('has-media-controls-hidden')
+          video.removeAttribute('controls')
+        },
       }
+
+  window.addEventListener("load", onload);
+
+  function onload () {
+    video.onended = onended;
+  }
+  function onended () {
+    videoMethods.showVideoPlayButton()
+  }
 
   videoMethods.renderVideoPlayButton()
 </script>
