--- a/index.html
+++ b/index.html
@@ -72,10 +72,18 @@
   <div class="video">
     <div class="video-border">
       <div class="video-container">
-        <video controls autoplay muted poster="images/celebs/m-video-still-magic.jpg">
-          <source src="images/videos/magicjohnson540.mp4" type="video/mp4">
+        <video controls autoplay muted>
+          <source src="images/videos/episode1-magic.mp4" type="video/mp4">
         </video>
         <div class="video-poster"></div>
+        <svg class="video-overlay-play-button" viewBox="0 0 200 200" alt="Play video">
+          <style type="text/css">
+            .st0{stroke:#EBC547;stroke-width:6;stroke-miterlimit:10;}
+            .st1{fill:#EBC547;}
+          </style>
+          <rect class="st0" width="200" height="200" fill-opacity="0.75"></rect>
+          <polygon class="st1" points="76.7,70.7 76.7,133.3 131.3,102 "></polygon>
+        </svg>
       </div>
     </div>
   </div>
@@ -208,32 +216,10 @@
   var videoPlayButton,
       videoContainer = document.getElementsByClassName('video-container')[0],
       videoPoster = document.getElementsByClassName('video-poster')[0],
+      videoPlayButton = document.getElementsByClassName('video-overlay-play-button')[0],
       video = document.getElementsByTagName('video')[0],
 
       videoMethods = {
-        renderVideoPlayButton: function() {
-          if (videoContainer.contains(video)) {
-            videoPoster.classList.add('is-hidden')
-            this.formatVideoPlayButton()
-            videoPlayButton = document.getElementsByClassName('video-overlay-play-button')[0]
-            videoPlayButton.classList.add('is-hidden')
-            videoPlayButton.addEventListener('click', this.hideVideoPlayButton)
-          }
-        },
-
-        formatVideoPlayButton: function() {
-          videoContainer.insertAdjacentHTML('beforeend', '\
-		<svg class="video-overlay-play-button" viewBox="0 0 200 200" alt="Play video">\
-			<style type="text/css">\
-			.st0{stroke:#EBC547;stroke-width:6;stroke-miterlimit:10;}\
-			.st1{fill:#EBC547;}\
-			</style>\
-		  <rect class="st0" width="200" height="200" fill-opacity="0.75"/>\
-		  <polygon class="st1" points="76.7,70.7 76.7,133.3 131.3,102 "/>\
-		</svg>\
-		')
-        },
-
         hideVideoPlayButton: function() {
           video.play()
           videoPoster.classList.add('is-hidden')
@@ -250,16 +236,22 @@
         },
       }
 
-  window.addEventListener("load", onload);
+  videoPlayButton.addEventListener('click', videoMethods.hideVideoPlayButton);
+
+  window.addEventListener("DOMContentLoaded", onload, false);
 
   function onload () {
     video.onended = onended;
+    video.onplay = onplay;
   }
+
   function onended () {
     videoMethods.showVideoPlayButton()
   }
 
-  videoMethods.renderVideoPlayButton()
+  function onplay () {
+    videoMethods.hideVideoPlayButton()
+  }
 </script>
 </body>
 </html>
