--- a/index.html
+++ b/index.html
@@ -69,14 +69,14 @@
       Each week, Harvey Levin will showcase intimate interviews with high-profile newsmakers and celebrities who will tell their life stories through certain objects they have chosen to keep close over the years. The objects are jumping points in understanding how certain experiences shaped them into who they are today.
     </div>
   </div>
-  <div class="video">
+  <div class="video" id="video">
     <div class="video-border">
       <div class="video-container">
-        <video controls autoplay muted>
+        <video controls autoplay muted >
           <source src="images/videos/episode1-magic.mp4" type="video/mp4">
         </video>
-        <div class="video-poster"></div>
-        <svg class="video-overlay-play-button" viewBox="0 0 200 200" alt="Play video">
+        <div class="video-poster" id="video-poster"></div>
+        <svg class="video-overlay-play-button" id="video-overlay-play-button" viewBox="0 0 200 200" alt="Play video">
           <style type="text/css">
             .st0{stroke:#EBC547;stroke-width:6;stroke-miterlimit:10;}
             .st1{fill:#EBC547;}
@@ -213,44 +213,49 @@
 </div>
 
 <script type="text/javascript">
-  var videoPlayButton,
-      videoContainer = document.getElementsByClassName('video-container')[0],
-      videoPoster = document.getElementsByClassName('video-poster')[0],
-      videoPlayButton = document.getElementsByClassName('video-overlay-play-button')[0],
-      video = document.getElementsByTagName('video')[0],
+  var video = document.getElementsByTagName("video")[0];
+  var videoPoster = document.getElementById("video-poster");
+  var videoPlayButton = document.getElementById("video-overlay-play-button");
 
-      videoMethods = {
-        hideVideoPlayButton: function() {
-          video.play()
-          videoPoster.classList.add('is-hidden')
-          videoPlayButton.classList.add('is-hidden')
-          video.classList.remove('has-media-controls-hidden')
-          video.setAttribute('controls', 'controls')
-        },
+  videoMethods = {
+    hideVideoPlayButton: function() {
+      video.play();
+      videoPoster.classList.add("is-hidden");
+      videoPlayButton.classList.add("is-hidden");
+    },
 
-        showVideoPlayButton: function() {
-          videoPoster.classList.remove('is-hidden')
-          videoPlayButton.classList.remove('is-hidden')
-          video.classList.remove('has-media-controls-hidden')
-          video.removeAttribute('controls')
-        },
+    playVideoPlayButton: function() {
+      if(video.muted){
+        video.muted = false;
       }
+      video.play();
+      videoPoster.classList.add("is-hidden");
+      videoPlayButton.classList.add("is-hidden");
+    },
 
-  videoPlayButton.addEventListener('click', videoMethods.hideVideoPlayButton);
+    showVideoPlayButton: function() {
+      videoPoster.classList.remove("is-hidden");
+      videoPlayButton.classList.remove("is-hidden");
+    },
+  }
+
+  videoPlayButton.addEventListener("click", videoMethods.playVideoPlayButton);
 
   window.addEventListener("DOMContentLoaded", onload, false);
 
   function onload () {
+    videoPoster.classList.add("is-loaded");
+    videoPlayButton.classList.add("is-loaded");
     video.onended = onended;
     video.onplay = onplay;
   }
 
   function onended () {
-    videoMethods.showVideoPlayButton()
+    videoMethods.showVideoPlayButton();
   }
 
   function onplay () {
-    videoMethods.hideVideoPlayButton()
+    videoMethods.hideVideoPlayButton();
   }
 </script>
 </body>
